# mlmp

./: .gitignore  .gitmodules  README.md  TODO.md  composer_results.json  pyproject.toml  test_refactor.json
.claude/: .gitignore
.claude/plans/: probing.md  (+1 more)
dataset-samples/: task_00000000.json  task_00000001.json  task_00000002.json  task_00000003.json  task_00000004.json  task_00000005.json  task_00000006.json  task_00000007.json  task_00000008.json  task_00000009.json  task_00000010.json  task_00000011.json  task_00000012.json  task_00000013.json  task_00000014.json  task_00000015.json  task_00000016.json  task_00000017.json  task_00000018.json  task_00000019.json  task_00000020.json  task_00000021.json  task_00000022.json  task_00000023.json  task_00000024.json  task_00000025.json  task_00000026.json  task_00000027.json  task_00000028.json  task_00000029.json  task_00000030.json  task_00000031.json  task_00000032.json  task_00000033.json  task_00000034.json  task_00000035.json  task_00000036.json  task_00000037.json  task_00000038.json  task_00000039.json  (+10 more)
docs/: COMPLETE_SUMMARY.md  EMPIRICAL_DEFAULT.md  ENUMERATION_RL_ALGORITHM.md  FAQ.md  FINAL_UPDATE.md  LAMBDA_FIX_SUMMARY.md  QUICK_REFERENCE.md  RANDOM_COMPOSER_LOW_VARIABILITY.md  README.md  README_EXPERIMENTS.md  RULE_PROGRAMS_FIXES.md  RULE_PROGRAMS_SUMMARY.md  RULE_PROGRAMS_TYPE_ERRORS.md  SCRIPTS_SUMMARY.md  UPDATE_SUMMARY.md  USAGE_GUIDE.md  VARIABILITY_AND_FAILURES.md  VISUALIZATION_GUIDE.md  enumeration-rl.tex  paper.tex  program-simplification.tex  rand_summary.md  references.bib
examples/: generate_programs.py
media/: comparison_results.json  out.txt
scripts/: backfill.sh  backfill_val_accuracy.py  batch_experiments.py  build_probing_robustness_config.py  build_rule_split.py  compare_composers.py  demo.sh  enumerate_programs.py  experiment_composers.py  generate_dataset.sh  generate_dataset.slurm  generate_dataset.slurm.sh  inverse-mlc-train.sh  plot_probing_robustness.py  print_episode.py  quick_composer_test.py  replot_study_v1.py  run_rl_experiment.py  run_rule_rl.py  setup.sh  simplify_corpus.py  small-backfill.sh  small-train.sh  sweep_analyze.py  sweep_best.py  sweep_train.sh  synthesize_corpus.py  train.sh  train.slurm.sh  visualise_example.py  visualize_results.py
src/: __init__.py  evaluator.py  lexer.py  parser.py  pipeline.py  train.py  type_checker.py  types.py  utils.py
src/lang_opt/: CMakeLists.txt  README.md  __init__.py  backend.py  setup.py
src/lang_opt/src/: bindings.cpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
sweeps/: easy-symbol-shuffling.yaml  in-weight.yaml
temp/: compare_bc_vs_rl.py  convert_rule_programs.py  crash_distribution.py  io_pool_distribution.py  measure_rule_depths.py  plot_rl_metrics.py  run_rl_experiment.py  run_rule_rl.py  test_corpus_robustness.py
tests/: test_composer.py  test_evaluator.py  test_lexer.py  test_mcts_composer.py  test_nesting.py  test_parser.py  test_train_small.py  test_type_checker.py
(+145 files in other folders)
