[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlmp"
version = "0.1.0"
description = "Metalearning metaprogram search for efficient program induction"
requires-python = ">=3.10"

[project.scripts]
generate-dataset = "data.generate_dataset:main"