[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlmp"
version = "0.1.0"
description = "Metalearning metaprogram search for efficient program induction"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0",
    "wandb>=0.20.0",
    "tqdm>=4.65.0",
    "torchtext>=0.6.0",
    "torchao>=0.14.0",
    "torchtune>=0.6.0",
]

[project.scripts]
generate-dataset = "data.generate:main"